--- a/infra/cloudformation.yaml
+++ b/infra/cloudformation.yaml
@@ -152,3 +152,13 @@ Outputs:
     Value: !GetAtt CICDPipeline.Outputs.ArtifactsBucketName
     Export:
       Name: connected-vehicle-cicd-artifacts-bucket
+  CodeRepositoryOwner:
+    Description: Owner of the repository that stores the code of this solution
+    Value: !Ref RepositoryOwner
+    Export:
+      Name: connected-vehicle-source-repository-owner
+  CodeRepositoryName:
+    Description: Name of the repository that stores the code of this solution
+    Value: !Ref RepositoryName
+    Export:
+      Name: connected-vehicle-source-repository-name
