Removing all tag intrinsics from module template.

--- a/scripts/modules/pipeline-creation/base.yaml
+++ b/scripts/modules/pipeline-creation/base.yaml
@@ -9,7 +9,8 @@ Resources:
     Type: AWS::CodePipeline::Pipeline
     Properties:
       ArtifactStore:
-        Location: !ImportValue connected-vehicle-cicd-artifacts-bucket
+        Location:
+          Fn::ImportValue: connected-vehicle-cicd-artifacts-bucket
         Type: S3
       DisableInboundStageTransitions: []
       Name: ConnectedVehicleModules
