Fixing module template structure.

--- a/scripts/modules/pipeline-creation/base.yaml
+++ b/scripts/modules/pipeline-creation/base.yaml
@@ -4,6 +4,7 @@ Parameters:
     Type: AWS::SSM::Parameter::Value<String>
     Description: Token used to fetch code from Gitub
     Default: GITHUB_OAUTH_TOKEN
+    NoEcho: Yes
 Resources:
   Pipeline:
     Type: AWS::CodePipeline::Pipeline
