--- a/scripts/modules/pipeline-creation/base.yaml
+++ b/scripts/modules/pipeline-creation/base.yaml
@@ -157,7 +157,8 @@ Resources:
           - AWS API Call via CloudTrail
         detail:
           eventSource: s3.amazonaws.com
-          eventName: PutObject
+          eventName: 
+            - PutObject
           resources: 
             ARN:
               - Fn::Sub: 
