Fixing rule definition.

--- a/scripts/modules/pipeline-creation/base.yaml
+++ b/scripts/modules/pipeline-creation/base.yaml
@@ -156,7 +156,8 @@ Resources:
         detail-type: 
           - AWS API Call via CloudTrail
         detail:
-          eventSource: s3.amazonaws.com
+          eventSource: 
+            - s3.amazonaws.com
           eventName: 
             - PutObject
           resources: 
