Removing ! intrinsic from modules template.

--- a/scripts/modules/pipeline-creation/base.yaml
+++ b/scripts/modules/pipeline-creation/base.yaml
@@ -175,7 +175,8 @@ Resources:
           Id: CodePipeline1
           Arn: 
             Fn::Sub: "arn:aws:codepipeline:${AWS::Region}:${AWS::AccountId}:${Pipeline}"
-          RoleArn: !GetAtt PipelineTriggerRole.Arn
+          RoleArn: 
+            Fn::GetAtt: PipelineTriggerRole.Arn
   PipelineTriggerRole:
     Type: AWS::IAM::Role
     Properties:
