--- a/infra/buildspec-package-templates.yaml
+++ b/infra/buildspec-package-templates.yaml
@@ -18,6 +18,8 @@ phases:
       - bash ${CODEBUILD_SRC_DIR}/scripts/modules/build-all.sh $INSTALLED_MODULES ${CODEBUILD_SRC_DIR}/output
       # Create module pipeline definition
       - node ${CODEBUILD_SRC_DIR}/scripts/modules/pipeline-creation/index.js
+      # Copy delivery buildspec
+      - mv ${CODEBUILD_SRC_DIR}/infra/buildspec-deliver-artifacts.yaml ${CODEBUILD_SRC_DIR}/output/buildspec.yaml
 artifacts:
   files:
     - output/*
