Including first api and driver-safety modules version.

--- a/modules/directory.yaml
+++ b/modules/directory.yaml
@@ -41,6 +41,8 @@ Modules:
       - auth
       - fleet
       - telemetry
+      - anomalies
+      - notifications
     Location: 
       Type: local
       Source: driver-safety
